@startuml

' --- Estilos ---
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

' --- Enums ---
enum Veredito {
    APROVADO
    REPROVADO
}

' --- Classes Relevantes ---
abstract class Usuario {
    # matricula : string
    # nome : string
    # email : string
    # senha : string
    # unidade : Unidade
    # precisa_redefinir_senha : bool
}

class Secretaria extends Usuario {
}

class Processo {
    - id : int
    - nome_empresa : string
    - data_criacao : Date
    - status : StatusProcesso
    - aluno : FK<Aluno>
    - coordenacao : FK<Coordenador>
    - secretaria : FK<Secretaria>
    - criado_por : string
    + nome_processo() : string
}

class Aluno {
    - cpf : string
    - is_ativo : bool
    - periodo : Periodo
    - curso : FK<Curso>
    - grade : M2M<Horarios>
}

class Contrato {
}

abstract class HistoricoAvaliacao {
    - id : int
    - observacoes : string
    - data_avaliacao : Date
    - veredito : Veredito
}

class HistoricoAvaliacaoContrato extends HistoricoAvaliacao {
    - avaliador : FK<Secretaria>
    - contrato_id : FK<Contrato>
    - justificativa : string
}

' --- Relacionamentos ---
Secretaria "1" -- "0..*" Processo : audita >
Secretaria "1" -- "0..*" Aluno : pesquisa >
Secretaria "1" -- "0..*" HistoricoAvaliacaoContrato : avalia >
Contrato "1" -- "0..1" HistoricoAvaliacaoContrato : possui >

@enduml
